--- a/player-analyzer/src/app/app.component.html
+++ b/player-analyzer/src/app/app.component.html
@@ -1,10 +1,10 @@
-    <main>
-      <header class="brand-name">
-        <img class="brand-logo" src="../assets/logo.svg" alt="logo" aria-hidden="true" />
-      </header>
-      <section class="content">
-        <app-home></app-home>
-      </section>
-    </main>
-
-<router-outlet />
+<main>
+	<a [routerLink]="['/']">
+	  <header class="brand-name">
+		<img class="brand-logo" src="/assets/logo.svg" alt="logo" aria-hidden="true" />
+	  </header>
+	</a>
+	<section class="content">
+	  <router-outlet></router-outlet>
+	</section>
+  </main>
