--- a/player-analyzer/src/app/dashboard/dashboard.component.html
+++ b/player-analyzer/src/app/dashboard/dashboard.component.html
@@ -2,16 +2,49 @@
   <div>
     <h1>Fantasy Football Analysis Wizard</h1>
   </div>
-  <div *ngIf="foobar.length > 0; else noPlayers">
-    <ul>
-      <li *ngFor="let player of foobar">
-        {{ player.first_name }} - {{ player.last_name }} - {{ player.position }}
-      </li>
-    </ul>
+
+  <div style="width : 75%; margin-right: auto; margin-left: auto">
+    <table mat-table [dataSource]="dataSource" matSort  class="mat-elevation-z8" style="width: 75%">
+
+      <ng-container matColumnDef="espn_headshot">
+        <th mat-header-cell *matHeaderCellDef ></th>
+        <td mat-cell *matCellDef="let player"><img src="{{player.espn_headshot}}" style="max-height:60px"></td>
+      </ng-container>
+
+      <ng-container matColumnDef="long_name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header [sortActionDescription]="'Sort by Name'">Name</th>
+        <td mat-cell *matCellDef="let player">{{ player.long_name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
+        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row
+          (click)="null"
+          *matRowDef="let row; columns: displayedColumns;">
+      </tr>
+    </table>
+
   </div>
+
+
+  <mat-paginator
+    [pageSize]="50"
+    showFirstLastButtons
+    [pageSizeOptions]="[25,50,100,500]"
+  >
+  </mat-paginator>
+
+
+
   <ng-template #noPlayers>
-    <p>No players available.</p>
+    <p>Sorry! No players available to display</p>
   </ng-template>
 
 
 </section>
+
+
