--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <section>
-  <div>
-    <h1>Fantasy Football Analysis Wizard</h1>
+  <div style="margin-bottom: 5%">
+    <h1>FANTASY FOOTBALLPEDIA</h1>
   </div>
 
   <div style="width : 75%; margin-right: auto; margin-left: auto">
