--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,10 @@
 
 <div class="container" style="padding: 50px 0 100px 0">
 <!--  <app-account *ngIf="session; else auth" [session]="session!"></app-account>-->
-  <app-dashboard *ngIf="session; else auth"></app-dashboard>
-  <ng-template #auth>
-    <app-auth></app-auth>
-  </ng-template>
+<!--  <app-dashboard *ngIf="session; else auth"></app-dashboard>-->
+<!--  <ng-template #auth>-->
+<!--    <app-auth></app-auth>-->
+<!--  </ng-template>-->
+
+  <app-dashboard></app-dashboard>
 </div>
