--- a/src/app/player-details/player-details.component.html
+++ b/src/app/player-details/player-details.component.html
@@ -1,7 +1,7 @@
 <section>
   <h1 class="font-bold mb-5 text-2xl">Player Details</h1>
 
-  <mat-card appearance="outlined">
+  <mat-card appearance="outlined" class="playerCard">
     <mat-grid-list cols="4">
       <mat-grid-tile
         [colspan]="1"
@@ -25,12 +25,7 @@
 
     </mat-grid-list>
 
-
-    <mat-card-content>
-    </mat-card-content>
-
-
-    <mat-card appearance="outlined">
+    <mat-card>
       <mat-card-content>Insert stats here</mat-card-content>
     </mat-card>
 
