feat: fix theme, add more to dashboard, add logos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,13 @@
 <!--	</section>-->
 <!--  </main>-->
 
-<div class="container" style="padding: 50px 0 100px 0">
+<div class="flex items-center justify-center pt-8 pb-8">
+  <div class="flex items-center justify-center">
+    <img ngSrc="assets/logo-white-no-bg-trimmed.png" class="max-w-56" alt="Scout Wizard Logo" height="500" width="500"/>
+  </div>
+</div>
+
+<div class="">
 <!--  <app-account *ngIf="session; else auth" [session]="session!"></app-account>-->
   <router-outlet></router-outlet>
 
