--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,26 @@
 @tailwind utilities;
 @include mat.core();
 
+$theme: mat.define-theme((
+  color: (
+    theme-type: dark,
+    primary: mat.$violet-palette,
+  ),
+  typography: (
+    brand-family: Roboto,
+    bold-weight: 900
+  ),
+  density: (
+    scale: -1
+  ),
+));
+
+html{
+  @include mat.core-theme($theme);
+  @include mat.button-theme($theme);
+  @include mat.all-component-themes($theme);
+}
+
 html,
 body {
   --custom-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
