feat: do some crazy scrollbar stuff

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
 
 <!--		running backs -->
 		<mat-grid-tile class="rounded-md shadow-purple-800 shadow-md">
-			<mat-card class="overflow-auto h-full w-full scrollbar-thin">
+			<mat-card class="overflow-auto h-full w-full scrollbar-none">
 				<mat-card-header>
 					<mat-card-title>Running Backs</mat-card-title>
 				</mat-card-header>
@@ -42,7 +42,7 @@
 
 <!--	Wide Receivers		-->
 		<mat-grid-tile class="rounded-md">
-			<mat-card class="overflow-auto h-full w-full scrollbar-thin">
+			<mat-card class="overflow-auto h-full w-full scrollbar-none">
 				<mat-card-header>
 					<mat-card-title>Wide Receivers</mat-card-title>
 				</mat-card-header>
@@ -78,7 +78,7 @@
 
 <!--		quarter backs-->
 		<mat-grid-tile class="rounded-md">
-			<mat-card class="overflow-auto h-full w-full scrollbar-thin">
+			<mat-card class="overflow-auto h-full w-full scrollbar-none">
 				<mat-card-header>
 					<mat-card-title>Quarterbacks</mat-card-title>
 				</mat-card-header>
@@ -114,7 +114,7 @@
 
 <!--		tight ends-->
 		<mat-grid-tile class="rounded-md">
-			<mat-card class="overflow-auto h-full w-full scrollbar-thin">
+			<mat-card class="overflow-auto h-full w-full scrollbar-none">
 				<mat-card-header>
 					<mat-card-title>Tight Ends</mat-card-title>
 				</mat-card-header>
