fix: touch up dashboard

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,6 @@
-<section *ngIf="session; else auth">
+<section *ngIf="session; else auth" class="mb-52">
 
-	<div class="mb-5">placeholder section for top 10 player scores</div>
-
-	<mat-grid-list cols="2" gutterSize="3%">
+	<mat-grid-list cols="2" gutterSize="3%" class="mt-10">
 
 <!--		running backs -->
 		<mat-grid-tile class="rounded-md shadow-purple-800 shadow-md">
